# gait-experiments

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
doc/: CMakeLists.txt  groups.dox
programs/: CMakeLists.txt
programs/oneFootStand/: CMakeLists.txt  OneFootStand.cpp  OneFootStand.hpp  main.cpp
programs/squatAndBalance/: CMakeLists.txt  main.cpp
programs/squatLooped/: CMakeLists.txt  main.cpp
programs/stableGait/: CMakeLists.txt  FootSpec.hpp  GaitSpecs.hpp  LimitChecker.cpp  LimitChecker.hpp  StepGenerator.cpp  StepGenerator.hpp  TargetBuilder.cpp  TargetBuilder.hpp  TrajectoryGenerator.cpp  TrajectoryGenerator.hpp  TrajectoryReader.cpp  main.cpp
programs/zmpViewer/: CMakeLists.txt  ZmpViewer.cpp  ZmpViewer.hpp  main.cpp
share/: CMakeLists.txt
share/applications/: gaitReal.xml  gaitSim.xml
share/contexts/oneFootStand/: oneFootStand-rightLeg.ini
share/contexts/zmpViewer/: zmpViewer-teo.ini
